apps/outline/the-intersect/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
  labels:
    app.kubernetes.io/name: outline
spec:
  selector:
    app.kubernetes.io/name: outline
  ports:
    - name: http
      port: 3000
      targetPort: http
